--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -805,6 +805,253 @@
     "\n",
     "assert split_list([], 1375) == []"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A virtual vending machine\n",
+    "\n",
+    "This is a small project in object oriented programming that simulates a vending machine which takes coins (Canadian denomination: nickels, dimes, quarters, loonies and toonies only -no pennies) and dispenses drinks, chips and candies. The products have different prices. The main purpose of this project is to learn about dataclasses.\n",
+    "\n",
+    "## Classes and Methods\n",
+    "- ### Vending Machine\n",
+    "#### Fields:\n",
+    "- inserted_coins\n",
+    "- purchases\n",
+    "#### Methods:\n",
+    "- insert_coin(coin)\n",
+    "- buy_product(product)\n",
+    "- return_change()\n",
+    "- ### InsufficientFunds\n",
+    "Exception Class\n",
+    "- ### Product\n",
+    "#### Fields:\n",
+    "- name\n",
+    "- price\n",
+    "#### Methods:\n",
+    "- str\n",
+    "#### Subclasses inherited from Product:\n",
+    "- Chips\n",
+    "- Drink\n",
+    "- Candy\n",
+    "- ### Coin\n",
+    "#### Fields:\n",
+    "None\n",
+    "#### Methods:\n",
+    "- constructor and str\n",
+    "#### Subclasses Inherited from Coin\n",
+    "- Nickel\n",
+    "- Dime\n",
+    "- Quarter\n",
+    "- Loonie\n",
+    "- Toonie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'field' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Python_The_early_days_of_learning.ipynb Cell 19\u001b[0m line \u001b[0;36m8\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m     price: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m315\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39mA virtual vending machine.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m \u001b[39m@dataclass\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mVendingMachine\u001b[39;00m():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Represents an vending machine that takes coins as input and allows purchase\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=81'>82</a>\u001b[0m \u001b[39m        of product and returns change\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=87'>88</a>\u001b[0m \u001b[39m        get_change() -> List[Coin]  \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m     inserted_coins: \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m field(default_factory\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Python_The_early_days_of_learning.ipynb Cell 19\u001b[0m line \u001b[0;36m9\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m \u001b[39m@dataclass\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mVendingMachine\u001b[39;00m():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Represents an vending machine that takes coins as input and allows purchase\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=81'>82</a>\u001b[0m \u001b[39m        of product and returns change\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=87'>88</a>\u001b[0m \u001b[39m        get_change() -> List[Coin]  \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m     inserted_coins: \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m field(default_factory\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m     purchases: \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m field(default_factory\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=94'>95</a>\u001b[0m \u001b[39m##\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=95'>96</a>\u001b[0m \u001b[39m# insert_coin takes two arguments: one called \"coin\" and another called \"inserted_coins\".\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=96'>97</a>\u001b[0m \u001b[39m#The \"coin\" parameter will accept the values any of the following values: 5, 10, 25, 100, 200.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=99'>100</a>\u001b[0m \u001b[39m#When the function insert_coin() is called, the \"coin\" value is appended to the insert_coins parameter.\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X25sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m \u001b[39m##\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'field' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "\"\"\"coins.py defines Coins() class, and Nickel(), Dime(), Quarter()\n",
+    "    Loonie() and Toonie() classes that inherit from Coin()\n",
+    "\"\"\"\n",
+    "\n",
+    "@dataclass()\n",
+    "class Coin():\n",
+    "    \"\"\"Coin() is the parent class that describes coins\"\"\"\n",
+    "   \n",
+    "    def __init__(self, val, lab):\n",
+    "        self.value = val\n",
+    "        self.label = lab\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.label\n",
+    "\n",
+    "@dataclass()\n",
+    "class Nickel(Coin):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(5, '5¢')\n",
+    "    # value: int = 5\n",
+    "    # label: str = '5¢'\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Dime(Coin):\n",
+    "    value: int = 10\n",
+    "    label: str = '10¢'\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Quarter(Coin):\n",
+    "    value: int = 25\n",
+    "    label: str = '25¢'\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Loonie(Coin):\n",
+    "    value: int = 100\n",
+    "    label: str = '$1'\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Toonie(Coin):\n",
+    "    value: int = 200\n",
+    "    label: str = '$2'\n",
+    "\n",
+    "\"\"\"product.py contains the Product() class and it's subclasses\"\"\"\n",
+    "@dataclass()\n",
+    "class Product:\n",
+    "    name : str =''\n",
+    "    price : int = 0\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f'{self.name}: ${self.price / 100}'\n",
+    "\n",
+    "@dataclass()\n",
+    "class Chips(Product):\n",
+    "    name: str = 'Chips'\n",
+    "    price: int = 225\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Drink(Product):\n",
+    "    name: str = 'Drink'\n",
+    "    price: int = 275\n",
+    "\n",
+    "\n",
+    "@dataclass()\n",
+    "class Candy(Product):\n",
+    "    name: str = 'Candy'\n",
+    "    price: int = 315\n",
+    "\n",
+    "\"\"\"\n",
+    "A virtual vending machine.\n",
+    "\"\"\"\n",
+    "\n",
+    "@dataclass\n",
+    "class VendingMachine():\n",
+    "    \"\"\"Represents an vending machine that takes coins as input and allows purchase\n",
+    "        of product and returns change\n",
+    "\n",
+    "        Functions:\n",
+    "        insert_coin(coin)\n",
+    "        buy_product(product, balance) -> Product  \n",
+    "        get_balance() -> int\n",
+    "        get_change() -> List[Coin]  \n",
+    "    \"\"\"\n",
+    "\n",
+    "    inserted_coins: list = field(default_factory=list)\n",
+    "    purchases: list = field(default_factory=list)\n",
+    "\n",
+    "\n",
+    "##\n",
+    "# insert_coin takes two arguments: one called \"coin\" and another called \"inserted_coins\".\n",
+    "#The \"coin\" parameter will accept the values any of the following values: 5, 10, 25, 100, 200.\n",
+    "# These values represent cents. Any other value should raise a ValueError exception.\n",
+    "#The \"inserted_coins\" parameter is a list\n",
+    "#When the function insert_coin() is called, the \"coin\" value is appended to the insert_coins parameter.\n",
+    "##\n",
+    "    def insert_coin(self, coin):\n",
+    "        if not isinstance(coin, coins.Coin):\n",
+    "            raise ValueError\n",
+    "        \n",
+    "        self.inserted_coins.append(coin)\n",
+    "\n",
+    "##\n",
+    "# buy_product takes two arguments: one called \"product\" and the other is called \"balance\".\n",
+    "# The product argument may be one of the following values: \"drink\", \"candy\", \"chips\".\n",
+    "# Any other value should raise a ValueError exception.\n",
+    "# balance is an integer representing the current balance of funds available\n",
+    "# When the buy_product function is called, the price of the chosen product is compared to the balance.\n",
+    "# If the balance of the inserted coins is less than the cost of the product, a custom exception called\n",
+    "# InsufficientFunds should be raised.\n",
+    "# If the balance equals or exceeds the cost of the product, then the function\n",
+    "# will return the balance minus the cost of the purchased product.\n",
+    "\n",
+    "# Drink: $2.75\n",
+    "# Chips: $2.25\n",
+    "# Candy: $3.15\n",
+    "##\n",
+    "    def buy_product(self, prod):\n",
+    "        if not isinstance(prod, product.Product):\n",
+    "            raise ValueError\n",
+    "        \n",
+    "        balance = self.get_balance()\n",
+    "        if balance < prod.price:\n",
+    "            raise InsufficientFunds\n",
+    "        \n",
+    "        purchased = prod()\n",
+    "        self.purchases.append(purchased)\n",
+    "        \n",
+    "        return purchased\n",
+    "\n",
+    "##\n",
+    "# return_change takes a single argument called \"balance\".\n",
+    "# If the balance is greater than zero, return a list of coins (can be any of 5, 10, 25, 100, 200)\n",
+    "# which will sum up to the balance.\n",
+    "# If for whatever reason the balance is not a multiple of 5,\n",
+    "# then the sum of coins returned should be rounded down to the nearest multiple of 5, and not exceed the balance.\n",
+    "# The coins returned should be the largest first, then the smallest.\n",
+    "##\n",
+    "    def return_change(self):\n",
+    "        balance = self.get_balance()\n",
+    "        ret_list = []\n",
+    "\n",
+    "        if balance > 0:\n",
+    "            possible_coins = list(coins.Nickel(), coins.Dime(),\n",
+    "                                  coins.Quarter, coins.Loonie,\n",
+    "                                  coins.Toonie)\n",
+    "            for coin in possible_coins:\n",
+    "                while balance >= coin.get_value():\n",
+    "                    ret_lst.append(coin)\n",
+    "                    balance -= coin.get_value()\n",
+    "        \n",
+    "        self.inserted_coins = []\n",
+    "        self.purchases = []\n",
+    "        \n",
+    "        return ret_list\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        balance = 0\n",
+    "        for coin in self.inserted_coins:\n",
+    "            balance += coin.value\n",
+    "\n",
+    "        for product in self.purchases:\n",
+    "            balance -= product.price\n",
+    "\n",
+    "        return balance\n",
+    "    \n",
+    "class InsufficientFunds(Exception):\n",
+    "    \"\"\"\n",
+    "    Exception used to indicate that there isn't\n",
+    "    enough money to make a purchase.\n",
+    "    \"\"\"\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
