--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
     "    # machine.buy_product(product.Chips)\n",
     "    machine.insert_coin(Toonie())\n",
     "    machine.insert_coin(Quarter())\n",
-    "    machine.buy_product(Chips())\n",
+    "    machine.buy_product(Chips)\n",
     "\n",
     "\n",
     "def test_buy_product_accepts_drink():\n",
@@ -1258,23 +1258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Chips' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Python_The_early_days_of_learning.ipynb Cell 23\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m test_inserted_coins_are_appended_to_coin_list()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m test_buy_product_rejects_strings()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m test_buy_product_accepts_chips_with_sufficient_balance()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m test_buy_product_accepts_drink()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m test_buy_product_accepts_candy()\n",
-      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Python_The_early_days_of_learning.ipynb Cell 23\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=123'>124</a>\u001b[0m machine\u001b[39m.\u001b[39minsert_coin(Toonie())\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=124'>125</a>\u001b[0m machine\u001b[39m.\u001b[39minsert_coin(Quarter())\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=125'>126</a>\u001b[0m machine\u001b[39m.\u001b[39mbuy_product(Chips())\n",
-      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Python_The_early_days_of_learning.ipynb Cell 23\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=129'>130</a>\u001b[0m \u001b[39mif\u001b[39;00m balance \u001b[39m<\u001b[39m prod\u001b[39m.\u001b[39mprice:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=130'>131</a>\u001b[0m     \u001b[39mraise\u001b[39;00m InsufficientFunds\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=132'>133</a>\u001b[0m purchased \u001b[39m=\u001b[39m prod()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpurchases\u001b[39m.\u001b[39mappend(purchased)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Python_The_early_days_of_learning.ipynb#X32sZmlsZQ%3D%3D?line=135'>136</a>\u001b[0m \u001b[39mreturn\u001b[39;00m purchased\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Chips' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_nickel_value()\n",
     "   \n",
@@ -1326,32 +1312,166 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "chips = Chips()\n",
-    "isinstance(Chips(), Product)"
+    "Sorting Algorithms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def swap(L, p1, p2):\n",
+    "  \"\"\"Swap items from indices p1 and p2 in list L\"\"\"\n",
+    "  temp = L[p1]\n",
+    "  L[p1] = L[p2]\n",
+    "  L[p2] = temp\n",
+    "  \n",
+    "def bubble_sort(L):\n",
+    "  \"\"\"bubble_sort(L)\n",
+    "  consumes L a list of integers,\n",
+    "  returns None and sorts L via mutation using the bubble sort algorithm.\"\"\"\n",
+    "  n = len(L)\n",
+    "  end = n  - 1\n",
+    "  swapped = True\n",
+    "  \n",
+    "  while swapped == True:\n",
+    "    swapped = False\n",
+    "    for pos in range(end):\n",
+    "      if L[pos] > L[pos + 1]:\n",
+    "        swap(L, pos, pos + 1)\n",
+    "        swapped = True\n",
+    "    end = end - 1\n",
+    "\n",
+    "L = [6, 1, 5, 3]\n",
+    "bubble_sort(L)\n",
+    "assert L == [1, 3, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersect(L, M): # O(n) where n is the combined length of the two parameters\n",
+    "  \"\"\"intersect(L, M)\n",
+    "  consumes two sorted lists of distinct integers L and M, \n",
+    "  and returns a sorted list that contains only elements common to both lists.\n",
+    "  \"\"\"\n",
+    "  retlst = [] # O(1)\n",
+    "  posL = 0 # O(1)\n",
+    "  posM = 0 # O(1)\n",
+    "  \n",
+    "  while (posL < len(L)) and (posM < len(M)): # loops at most n times\n",
+    "    itemL = L[posL] # O(1)\n",
+    "    itemM = M[posM] # O(1)\n",
+    "    \n",
+    "    if itemL > itemM: # O(1)\n",
+    "      posM += 1 # O(1)\n",
+    "    elif itemM > itemL: # O(1)\n",
+    "      posL += 1 # O(1)\n",
+    "    else:\n",
+    "      retlst.append(itemL) # O(1)\n",
+    "      posL += 1 # O(1)\n",
+    "      posM += 1 # O(1)\n",
+    "    \n",
+    "  return retlst # O(1)\n",
+    "\n",
+    "assert intersect([3, 7, 9, 12, 14], [1, 2, 5, 7, 10, 11, 12]) == [7, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lst_sum(s, r):\n",
+    "  for x in s:\n",
+    "    if type(x) == list:\n",
+    "      r = r + lst_sum(x, r)\n",
+    "    else:\n",
+    "      r = r + x\n",
+    "  return r  \n",
+    "  \n",
+    "def nest_sort_helper(s):\n",
+    "  ret = 0\n",
+    "  \n",
+    "  if type(s) == list:\n",
+    "    if s == []:\n",
+    "      return ret\n",
+    "    else:\n",
+    "      nest_sort(s)\n",
+    "      return lst_sum(s, 0)\n",
+    "    \n",
+    "    return ret + nest_sort_helper(s)\n",
+    "    \n",
+    "  else:\n",
+    "    return ret + s\n",
+    "\n",
+    "def nest_sort(N):\n",
+    "  \"\"\"nest_sort(N)\n",
+    "    consumes N, a (nestof Int), returns None, \n",
+    "    and mutates N to be in sorted order in according to the following rules:\n",
+    "\n",
+    "    A nest should come before a sibling nest if the sum of all the integers\n",
+    "    it contains is smaller than the sum of the integers the other nest contains;\n",
+    "    for example [2, 5] should come before [9].\n",
+    "\n",
+    "    If the sum of the integers contained in two sibling nests are equal, \n",
+    "    they keep the order they had.\n",
+    "\n",
+    "    An integer should come before a sibling nest if it is smaller than the sum \n",
+    "    of all the integers the nest contains; \n",
+    "    for example 9 should come before [4, 3, 3]\n",
+    "\n",
+    "    If an integer is equal to the sum of the integers contained \n",
+    "    in a sibling nest, they keep the order they had.\n",
+    "\n",
+    "    If two integers are equal... It does not matter, they are the same anyway.\n",
+    "\n",
+    "    The function nest_sort must run in  O(n log n)\n",
+    "    where n is the number of individual integers across all nests.\n",
+    "\"\"\"\n",
+    "  N.sort(key = nest_sort_helper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_first_help(corpus, prefix, start, end): # O(log n)\n",
+    "  if start >= end: # O (1)\n",
+    "    return\n",
+    "  \n",
+    "  prefix_len = len(prefix) # O (1)\n",
+    "  string_to_match = corpus[start][:prefix_len] # O(k)\n",
+    "  if string_to_match == prefix: # O(k)\n",
+    "    return corpus[start]  # O(1)\n",
+    "  \n",
+    "  mid = (start + end)//2 # O(1)\n",
+    "  \n",
+    "  if corpus[mid][:prefix_len] <= prefix : # O(k)\n",
+    "    start = start + 1 # O(1)\n",
+    "    end = mid + 1 # O(1)\n",
+    "  else:\n",
+    "    start = mid + 1 # O(1)\n",
+    "  \n",
+    "  return find_first_help(corpus, prefix, start, end) # T(n/2)\n",
+    "\n",
+    "def find_first(corpus, prefix):   # O(log n)\n",
+    "  \"\"\"find_first(corpus, prefix)\n",
+    "    consumes corpus, a sorted list of unique strings and prefix a string, \n",
+    "    and and returns the first string in corpus that starts with prefix or \n",
+    "    None if no such string exists. Must run in O(log n) time.\"\"\"\n",
+    "  return find_first_help(corpus, prefix, 0, len(corpus)) # O(log n) "
+   ]
   }
  ],
  "metadata": {
