description of sorting

--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -1315,7 +1315,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sorting Algorithms"
+    "# Sorting Algorithms\n",
+    "Here is a collection of a few sorting algorithms, starting with bubble sort, with specified restriction on run-times."
    ]
   },
   {
