Add Dates, Polygons, Courses

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -1735,6 +1735,46 @@
     "plt.title('Family of solutions to the DE')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A little graph theory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_sqr(p1, p2): # O(1)\n",
+    "  return (p1[0] - p2[0])**2 + (p1[1] - p2[1])**2\n",
+    "\n",
+    "def largest_edge_group(vertices): # O(n), n = len(vertices)\n",
+    "  \"\"\"  largest_edge_group(vertices)\n",
+    "    consumes vertices, a list of list of integer containing the coordinates## of the consecutive vertices of a polygon. \n",
+    "    The function largest_edge_group returns\n",
+    "    the size of the largest group of same length edges.\"\"\"\n",
+    "\n",
+    "  ret = {}\n",
+    "  max = 0\n",
+    "  for k in range(len(vertices)): # loops n times\n",
+    "    if k == len(vertices) - 1:\n",
+    "      dist = dist_sqr(vertices[k], vertices[0])\n",
+    "    else:\n",
+    "      dist = dist_sqr(vertices[k], vertices[k + 1])\n",
+    "    if dist in ret.keys():\n",
+    "      ret[dist] += 1\n",
+    "    else:\n",
+    "      ret[dist] = 1\n",
+    "    if max < ret[dist]:\n",
+    "      max = ret[dist]\n",
+    "  return max\n",
+    "\n",
+    "assert largest_edge_group([[0,0],[1,1],[0,2],[-2,3],[-1,2]]) == 3"
+   ]
   }
  ],
  "metadata": {
