--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -1473,6 +1473,296 @@
     "    None if no such string exists. Must run in O(log n) time.\"\"\"\n",
     "  return find_first_help(corpus, prefix, 0, len(corpus)) # O(log n) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Date and Time\n",
+    "Here a class for \"Dates\" has been modified to match the expected behavior of dates. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Below is the Date class.\n",
+    "\n",
+    "Dates should be equal (__eq__) if and only if they represent \n",
+    "exactly the same date (year, month, and day).\n",
+    "\n",
+    "A date when printed should display Date(day,month,year) where day, \n",
+    "month and year are the respective fields of the Date object.\n",
+    "\n",
+    "The add_day method consumes a positive integer number of days, and \n",
+    "returns the Date that is exactly that many days after self.\n",
+    "\n",
+    "The day_of_week method returns the day of the week as a capitalized string \n",
+    "\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \n",
+    "or \"Saturday\"\n",
+    "\"\"\"\n",
+    "REF_YEAR = 1900\n",
+    "REF_MONTH = 1\n",
+    "REF_DAY = 1\n",
+    "YEAR_PER_LEAP =  4\n",
+    "LEAP_YEAR_COND1 = 100\n",
+    "LEAP_YEAR_COND2 = 400\n",
+    "DAYS_PER_YEAR = 365\n",
+    "MONTHS_PER_YEAR = 12\n",
+    "DAYS_IN_MONTH = (31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)\n",
+    "MAX_DAYS_IN_MONTH = 31\n",
+    "DAYS_OF_WEEK = (\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\",\\\n",
+    "                \"Saturday\", \"Sunday\")\n",
+    "DAYS_PER_WEEK = 7\n",
+    "OFFSET = 1\n",
+    "\n",
+    "def is_leap_year(year):\n",
+    "  return year % 4 == 0 and \\\n",
+    "         (year % 100 != 0 or year % 400 == 0)\n",
+    "\n",
+    "class Date:\n",
+    "   '''Fields: \n",
+    "         day (Nat)\n",
+    "         month (Nat)\n",
+    "         year (Nat)\n",
+    "   '''\n",
+    "   \n",
+    "   def __init__(self, day, month, year):\n",
+    "     '''\n",
+    "     Initializes a Date object\n",
+    "     \n",
+    "     __init__: Date Nat Nat Nat -> None\n",
+    "     Requires: \n",
+    "        (day, month, year) is a valid day \n",
+    "        year >= 1800\n",
+    "     '''\n",
+    "     self.day = day\n",
+    "     self.month = month\n",
+    "     self.year = year\n",
+    "\t \n",
+    "   def __repr__(self):\n",
+    "     s = \"Date({0.day},{0.month},{0.year})\"\n",
+    "     return s.format(self)\n",
+    "\t \n",
+    "   def __eq__(self, other):\n",
+    "     return isinstance(other, Date) and \\\n",
+    "            self.day == other.day and \\\n",
+    "            self.month == other.month and \\\n",
+    "            self.year == other.year\n",
+    "\t  \n",
+    "   def day_of_week(self):\n",
+    "    num_days = 0\n",
+    "    if self.year >= REF_YEAR:\n",
+    "      num_years = self.year - REF_YEAR\n",
+    "      num_days = num_years * DAYS_PER_YEAR\n",
+    "      for x in range(self.month - REF_MONTH):\n",
+    "        num_days += DAYS_IN_MONTH[x]\n",
+    "      num_days += self.day - REF_DAY\n",
+    "      num_days = num_days + ((num_years - OFFSET + 300) // LEAP_YEAR_COND2)\n",
+    "      if is_leap_year(self.year) and self.month > 2:\n",
+    "        num_days += OFFSET \n",
+    "      sgn = 1  \n",
+    "    else:\n",
+    "      num_years = REF_YEAR - self.year\n",
+    "      num_days = (num_years - OFFSET) * DAYS_PER_YEAR\n",
+    "      num_days = num_days + ((num_years - OFFSET + 100) // LEAP_YEAR_COND2)\n",
+    "      for x in range(self.month, MONTHS_PER_YEAR):\n",
+    "        num_days += DAYS_IN_MONTH[x]\n",
+    "      num_days += (DAYS_IN_MONTH[self.month - OFFSET] - self.day + REF_DAY)\n",
+    "      if is_leap_year(self.year) and self.month <= 2:\n",
+    "        num_days += OFFSET      \n",
+    "      sgn = -1\n",
+    "      \n",
+    "    num_days = num_days + (num_years - 1) // YEAR_PER_LEAP\n",
+    "    num_days = num_days - (num_years - 1) // LEAP_YEAR_COND1\n",
+    "      \n",
+    "    return DAYS_OF_WEEK[sgn * (num_days % 7)]\n",
+    "  \n",
+    "   def days_curr_year(year):\n",
+    "     if is_leap_year(year):\n",
+    "       return DAYS_PER_YEAR + 1\n",
+    "     else:\n",
+    "       return DAYS_PER_YEAR\n",
+    "\n",
+    "   def add_days(self, n):\n",
+    "     curr_year = self.year\n",
+    "     curr_month = self.month\n",
+    "     curr_day = self.day\n",
+    "     while n > 0:\n",
+    "       leap = is_leap_year(curr_year)\n",
+    "       while curr_month <= 12:\n",
+    "         if leap and curr_month == 2:\n",
+    "           curr_month_days = 29\n",
+    "         else:\n",
+    "           curr_month_days = DAYS_IN_MONTH[curr_month - OFFSET]\n",
+    "         while curr_day < curr_month_days:\n",
+    "           curr_day += 1\n",
+    "           n -= 1\n",
+    "           if n <= 0:\n",
+    "             return Date(curr_day, curr_month, curr_year)\n",
+    "         curr_day = 1\n",
+    "         curr_month += 1\n",
+    "         if n - 1<= 0 and curr_month < 13:\n",
+    "           return Date(curr_day, curr_month, curr_year)\n",
+    "         elif curr_month < 13:\n",
+    "           n -= 1\n",
+    "         \n",
+    "       curr_day = 1\n",
+    "       curr_month = 1\n",
+    "       curr_year += 1\n",
+    "       n -= 1\n",
+    "     return Date(curr_day, curr_month, curr_year)\n",
+    "\n",
+    "assert str(Date(1,1,2000)) == \"Date(1,1,2000)\"\n",
+    "assert (Date(1,1,2000) == Date(1,1,2000)) == True\n",
+    "assert (Date(1,1,2000) == Date(1,2,2000)) == False\n",
+    "assert Date(6,7,2020).day_of_week() == \"Monday\"\n",
+    "assert Date(6,7,2020).add_days(30) == Date(5,8,2020)      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulating Term Grades\n",
+    "An object oriented approach at computing term grades for a student."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Course:\n",
+    "  ''' \n",
+    "   Represents a course attempt by a particular student\n",
+    "\n",
+    "   Fields: \n",
+    "      code (Str)\n",
+    "      term (Nat)\n",
+    "      grade ((anyof Nat Str))\n",
+    "\t\t\t          \n",
+    "   Requires: \n",
+    "      term is 4 digits (e.g. ths term is 1205)\n",
+    "      if grade is a nat, 0 <= grade <= 100\n",
+    "\t    if grade is a str, it is one of\n",
+    "\t    \"WD\", \"WF\", \"DNW\", \"INC\", \"CR\", \"NCR\"\n",
+    "  '''\n",
+    "\t  \n",
+    "  def __init__(self, code, term, grade):\n",
+    "    self.code = code \n",
+    "    self.term = term\n",
+    "    self.grade = grade\n",
+    "\t  \n",
+    "  def __repr__(self):\n",
+    "    return \"Course({0!r}, {1!r}, {2!r})\".format(\n",
+    "              self.code, self.term, self.grade)\n",
+    "  \n",
+    "  def __eq__(self,other):\n",
+    "\t  return isinstance(other,Course) and \\\n",
+    "\t           self.code == other.code and \\\n",
+    "\t           self.term == other.term and \\\n",
+    "\t           self.grade == other.grade\n",
+    "\t           \n",
+    "def course_list_by_term(courses):\n",
+    "  \"\"\" course_list_by_term() that consumes a list of Course and\n",
+    "    returns a dictionary where the keys are terms covered by the listed courses,\n",
+    "    and the values are lists of courses the student took that term. \n",
+    "    The list of courses should be in the same relative order\n",
+    "    they were in the consumed list.\n",
+    "    \"\"\"\n",
+    "  ret = {}\n",
+    "  for course in courses:\n",
+    "    if course.term in ret:\n",
+    "      ret[course.term].append(course)\n",
+    "    else:\n",
+    "      ret[course.term] = [course]\n",
+    "  return ret\n",
+    "\n",
+    "def is_numeric(course):\n",
+    "  if course.grade in [\"WF\", \"INC\", \"CR\", \"NCR\"]:\n",
+    "    return False\n",
+    "  elif course.grade in [\"WF\", \"DNW\"]:\n",
+    "    return 32\n",
+    "  else:\n",
+    "    return course.grade\n",
+    "  \n",
+    "def term_average(courses):\n",
+    "  \"\"\" term_average() that consumes a list of courses and returns a dictionary \n",
+    "  where the keys are all of the terms covered by the listed courses,\n",
+    "  and the values are the student's average grade that term,\n",
+    "  or None if no courses that term count toward the average.\n",
+    "\n",
+    "  For non-numerical grades:\n",
+    "\n",
+    "  WD, INC, CR, NCR do not count toward your average\n",
+    "  WF and DNW count as a 32\n",
+    "  \"\"\"\n",
+    "  ret = {}\n",
+    "  by_term = course_list_by_term(courses)\n",
+    "  for key in by_term.keys():\n",
+    "    n = 0\n",
+    "    total = 0\n",
+    "    for x in range(len(by_term[key])):\n",
+    "      num_score = is_numeric(by_term[key][x])\n",
+    "      if num_score:\n",
+    "        total += num_score\n",
+    "        n += 1\n",
+    "      elif by_term[key][x].grade == 0:\n",
+    "        n += 1\n",
+    "    if n == 0:\n",
+    "      ret[key] = None\n",
+    "    else:\n",
+    "      ret[key] = total / n\n",
+    "  return ret\n",
+    "        \n",
+    "\n",
+    "def highest_grade(courses):\n",
+    "  \"\"\"highest_grade() that consumes a list of courses, and \n",
+    "  returns a dictionary where the keys are course codes, \n",
+    "  and the values are the highest numerical grade achieved.\n",
+    "  If a course has no numerical grades recorded, \n",
+    "  it is excluded from the dictionary.\n",
+    "  \"\"\"\n",
+    "  ret = {}\n",
+    "  for course in courses:\n",
+    "    num_score = is_numeric(course)\n",
+    "    if num_score:\n",
+    "      if course.code in ret.keys():\n",
+    "        ret[course.code] = max(ret[course.code], num_score)\n",
+    "      else:\n",
+    "        ret[course.code] = num_score\n",
+    "    elif course.grade == 0:\n",
+    "      if course.code in ret.keys():\n",
+    "        ret[course.code] = max(ret[course.code], course.grade)\n",
+    "      else:\n",
+    "        ret[course.code] = course.grade      \n",
+    "      \n",
+    "  return ret\n",
+    "\n",
+    "CS115 = Course(\"CS115\", 1199, 75)\n",
+    "MATH135 = Course(\"MATH135\", 1199, 80)\n",
+    "CS116a = Course(\"CS116\", 1201, \"NCR\")\n",
+    "MATH136 = Course(\"MATH136\", 1201, \"CR\")\n",
+    "CS116b = Course(\"CS116\",1205, 80)\n",
+    "example_list = [CS115, MATH135, CS116a, MATH136, CS116b]\n",
+    "\n",
+    "assert course_list_by_term(example_list) ==\\\n",
+    "  {1199:[CS115, MATH135],\\\n",
+    "   1201:[CS116a, MATH136],\\\n",
+    "   1205:[CS116b]}\n",
+    "\n",
+    "assert term_average(example_list) ==\\\n",
+    "  {1199:77.5, 1201:None, 1205:80.0}\n",
+    "\n",
+    "assert highest_grade(example_list) ==\\\n",
+    "  {\"CS115\":75,\\\n",
+    "   \"MATH135\":80,\\\n",
+    "   \"CS116\":80}"
+   ]
   }
  ],
  "metadata": {
