--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,6 +2235,226 @@
     "T = Time(14,0,0,\"EST\",0)\n",
     "assert T.set_timezone(\"EDT\") == None\n",
     "assert T == Time(15,0,0,\"EDT\", 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# n-Grams\n",
+    "\n",
+    "From [Wikipedia](https://en.wikipedia.org/wiki/N-gram): \"n-gram is a series of n adjacent letters (including punctuation marks and blanks), syllables, or rarely whole words found in a language dataset; or adjacent phonemes extracted from a speech-recording dataset, or adjacent base pairs extracted from a genome.\"\n",
+    "\n",
+    "In other words. n-grams are sequences of words of length n in a text that is often used to analyze the text. They are very useful in text mining and natural language processing. Often probabilites of n=grams are used to build word-association, autocompletion, and FAQs. Below is an approach to work with n-grams."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## we will be detecting plagiarism in English essays. \n",
+    "\n",
+    "## ------------------------ MAIN : PREPROCESS_TEXT------------------------------\n",
+    "\n",
+    "def preprocess_text(text): # O(n)\n",
+    "    \"\"\"preprocess_text(s)\n",
+    "    consumes a string s and returns the processed string. \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def is_to_keep(index, start, end): # O(1)\n",
+    "        \"\"\"Use the following rules:\n",
+    "    \n",
+    "        All letters are replaced with their lower case equivalent.\n",
+    "    \n",
+    "        Numbers, dashes ('-'), and slashes ('/') are left as-is\n",
+    "    \n",
+    "        Apostrophes are only kept if they are in between two letters \n",
+    "    \n",
+    "        All consecutive whitespace characters (meaning, ' ' and '\\n' characters)\n",
+    "        are replaced with a single space character.\n",
+    "    \n",
+    "        All other characters not mentioned above are removed (e.g. '+' and '!')\"\"\"\n",
+    "\n",
+    "        space = False\n",
+    "        to_keep = False\n",
+    "        if text[index].isalnum():\n",
+    "            to_keep = True\n",
+    "        elif text[index] == \"-\" or text[index] == \"/\":\n",
+    "            to_keep = True\n",
+    "        elif text[index] == \"'\":\n",
+    "            if index == start or index == end - 1:\n",
+    "                to_keep = False\n",
+    "            elif text[index - 1].isalpha() and text[index + 1].isalpha():\n",
+    "                to_keep = True\n",
+    "            else:\n",
+    "                to_keep = False\n",
+    "        elif text[index] == \" \" or text[index] == \"\\n\":\n",
+    "            if text[index - 1] == \" \" or text[index - 1] == \"\\n\":\n",
+    "                to_keep = False\n",
+    "            else:\n",
+    "                to_keep = True\n",
+    "                space = True\n",
+    "        else:\n",
+    "            to_keep = False\n",
+    "        return [to_keep, space]\n",
+    "    \n",
+    "    retlst = []\n",
+    "    text_len = len(text)\n",
+    "    for index in range(text_len): # iterated n times\n",
+    "        to_keep, space = is_to_keep(index, 0, text_len)\n",
+    "        if to_keep:\n",
+    "            if space:\n",
+    "                retlst.append(\" \")\n",
+    "            else:\n",
+    "                retlst.append(text[index].lower())\n",
+    "    return \"\".join(retlst)\n",
+    "\n",
+    "## ---------------------------- PREPROCESS_TEXT------------------------------\n",
+    "\n",
+    "## ------------------------ MAIN: GET_NGRAMS----------------------------------\n",
+    "def get_ngrams(s, n): # O(nm) where n is the value of parameter , \n",
+    "                      #and m is the length of the string\n",
+    "    \"\"\"get_ngrams(s, n)\n",
+    "    that consumes a string s and a positive integer n and \n",
+    "    returns the n-gram dictionary\n",
+    "    (where the n parameter is the length of the n-grams to extract).\n",
+    "    An n-gram is a length n substring.\"\"\"\n",
+    "\n",
+    "    d = {}\n",
+    "    s_end = len(s) - (n - 1)\n",
+    "    for idx in range(s_end): # iterated m - n times\n",
+    "        key_lst = list(s[x + idx] for x in range(n)) # O(n)\n",
+    "        key = \"\".join(key_lst) # O(n)\n",
+    "        if key in d.keys():\n",
+    "            d[key] += 1\n",
+    "        else:\n",
+    "            d[key] = 1\n",
+    "    return d\n",
+    "         \n",
+    "## ------------------------------ GET_NGRAMS----------------------------------\n",
+    "\n",
+    "## ---------------------------MAIN: JACCARD_NGRAM-----------------------------\n",
+    "\n",
+    "\n",
+    "def jaccard_ngram(ngram1, ngram2):\n",
+    "    \"\"\"jaccard_ngram(ngram1, ngram2)\n",
+    "    that consumes two n-gram dictionaries in ngram1 and ngram2 and \n",
+    "    returns the Jaccard similarity score.\n",
+    "\n",
+    "    The Jaccard similarity of two sets A and B is\n",
+    "    jaccard(A,B) = size(A intersect B) / size(A union B)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \n",
+    "    def size(d):\n",
+    "        \"\"\" The size of an n-gram dictionary is the sum\n",
+    "        of the counts of all elements.\n",
+    "        \"\"\" \n",
+    "        return sum(d.values())\n",
+    "    \n",
+    "    # Test size:\n",
+    "    assert size({\"ba\":1, \"an\":2, \"na\":2}) == 5.\n",
+    "    ## ---------------------------SIZE----------------------------------------\n",
+    "    \n",
+    "    ## ---------------------------UNION---------------------------------------- \n",
+    "    def union(d1, d2):\n",
+    "        \"\"\"The union of n-gram dictionaries A and B will contain all n-grams \n",
+    "        that are in either A or B (just like a set union) and \n",
+    "        the count will be the maximum count for that key.       \n",
+    "        \"\"\"\n",
+    "\n",
+    "        s1 = set(d1.keys())\n",
+    "        s2 = set(d2.keys())\n",
+    "        s = s1.union(s2)\n",
+    "        d = {}\n",
+    "        for key in s:\n",
+    "            if key in d1.keys() and key in d2.keys():\n",
+    "                d[key] = max(d1[key], d2[key])\n",
+    "            elif key in d1.keys():\n",
+    "                d[key] = d1[key]\n",
+    "            else:\n",
+    "                d[key] = d2[key]\n",
+    "        return d\n",
+    "    \n",
+    "    # Test union:\n",
+    "    assert union({'a':1, 'b':2, 'c':2}, {'a':2, 'c':1}) == {'a':2, 'b':2, 'c':2}\n",
+    "    ## ---------------------------UNION----------------------------------------\n",
+    "    \n",
+    "    ##------------------------INTERSECTION-------------------------------------\n",
+    "    def intersection(d1, d2):\n",
+    "        \"\"\"The intersection of n-gram dictionaries A and B will contain all keys\n",
+    "        that are in both A and B (just like a set intersection) and the count \n",
+    "        will be the minimum count for that key.    \n",
+    "        \"\"\"\n",
+    "\n",
+    "        s1 = set(d1.keys())\n",
+    "        s2 = set(d2.keys())\n",
+    "        s = s1.intersection(s2)\n",
+    "        d = {}\n",
+    "        for key in s:\n",
+    "            d[key] = min(d1[key], d2[key])\n",
+    "        return d        \n",
+    "    \n",
+    "    # Test intersection:\n",
+    "    assert intersection({'a':1, 'b':2, 'c':2}, {'a':2, 'c':1}) == {'a':1, 'c':1}\n",
+    "    ##------------------------INTERSECTION-------------------------------------    \n",
+    "    \n",
+    "    if ngram1 or ngram2:\n",
+    "        return size(intersection(ngram1, ngram2)) / size(union(ngram1, ngram2))\n",
+    "    else:\n",
+    "        return 1.0\n",
+    "\n",
+    "## ------------------------------ JACCARD_NGRAM-------------------------------\n",
+    "\n",
+    "## ---------------------------MAIN : DOCUMENT_SIMILARITY-----------------------\n",
+    "def document_similarity(filename1, filename2, n):\n",
+    "    \"\"\"document_similarity(filename1, filename2, n)\n",
+    "    consumes two strings (file names), and n, a positive integer value.\n",
+    "    The function returns a floating point value equal to the \n",
+    "    Jaccard multi-set score for the n-grams extracted from the two named files.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    fin1 = open(filename1)\n",
+    "    fin2 = open(filename2)\n",
+    "    \n",
+    "    text1 = fin1.read()\n",
+    "    text2 = fin2.read()\n",
+    "    \n",
+    "    fin1.close()\n",
+    "    fin2.close()\n",
+    "    \n",
+    "    s1 = preprocess_text(text1)\n",
+    "    s2 = preprocess_text(text2)\n",
+    "    \n",
+    "    ngram1 = get_ngrams(s1, n)\n",
+    "    ngram2 = get_ngrams(s2, n)\n",
+    "    \n",
+    "    return jaccard_ngram(ngram1, ngram2)\n",
+    "    \n",
+    "##----------------------------- DOCUMENT_SIMILARITY-----------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Tests:\n",
+    "assert preprocess_text(\"This is a 'test'!\\n Try with  2-4-grams.\")\\\n",
+    "      == \"this is a test try with 2-4-grams\"\n",
+    "\n",
+    "assert get_ngrams(\"banana\", 2) == {\"ba\":1, \"an\":2, \"na\":2}\n",
+    "assert get_ngrams(\"dross\", 5) == {\"dross\":1}\n",
+    "\n",
+    "assert jaccard_ngram({'ba':1,'na':2, 'an':2}, {'ba':1, 'na':1, 'an':1}) == 0.6\n",
+    "assert jaccard_ngram({}, {}) == 1.0\n",
+    "\n",
+    "assert document_similarity(\"sim_test1.txt\", \"sim_test1.txt\", 3) == 1.0\n",
+    "assert document_similarity(\"sim_test1.txt\", \"sim_test2.txt\", 2) == 0.6\n",
+    "assert document_similarity(\"turn_input.txt\", \"sim_test2.txt\", 2) == 0.0"
    ]
   }
  ],
